<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChainChro Reminder</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="setReminders">Set Reminders</string>
    <string name="ap">AP</string>
    <string name="time">Time</string>
    <string name="exploring">Exploring</string>
    <string name="soul">Soul</string>
    <string name="brave">Brave</string>
    <string name="maxAP">Total</string>
    <string name="apFullAt">AP Full At</string>
    <string name="minutesToNextAP">Minutes To Next AP</string>
    <string name="dayBreak">Brave Count</string>
    <string name="dayBreakAt">Day Break At</string>
    <string name="dayBreakMinutes">Minutes to next brave</string>
    <string name="numSoul">Count of Soul</string>
    <string name="soulRemain">Soul Remain Minutes</string>
    <string name="halfSoulFullAt">Soul Halves At</string>
    <string name="soulFullAt">Soul Full At</string>
    <string name="exploringRemain">Exploring Remained</string>
    <string name="exploringDoneAt">Exploring Finishes At</string>
    <string name="apFullSoon">AP will be full soon!</string>
    <string name="dayBreakSoon">Dawn is coming soon!</string>
    <string name="halfSoulFullSoon">Soul will over 3 soon!</string>
    <string name="soulFullSoon">Soul will be full soon!</string>
    <string name="explDoneSoon">Exploring will finish soon!</string>
    <string name="explAutoScheduled">The next exploring notification has been scheduled at %1$s</string>
    <string name="alarmsRecovered">Alarm is recovered from device boot</string>
    <string name="notSet">Not Set</string>
    
</resources>